--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body.light-thme {
+  background-color: white;
+  color: black
+}
+
+body.dark-theme {
+  background-color: rgb(15, 15, 39);
+  color: white;
+}
