Basic layout for profile component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,3 +49,14 @@ body.dark-theme, .dark {
   border-radius: 50%;
   object-fit: cover;
 }
+
+.btn {
+  background-color: #004aad;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.btn:hover {
+  background-color: #165ab3;
+}
